Prepare alpha.5 with plant fixes, performance improvements and expanded fuels
Add physical SLC and ADS hardware, cached pipe routing, thermal water transport and live computer connections. Fix tank dismantling and shared CRD supplies; refine condenser placement, makeup ports and powered MSIVs. Expand the fuel catalogue and specialty rods with Blender inventory icons, regression coverage and a complete changelog since the previous push.